--- a/data/designs/colophon.mdx
+++ b/data/designs/colophon.mdx
@@ -72,21 +72,7 @@ The primary function of jacobs.blue is a feed of work. As a user, I should be ab
 
 You’ll notice a typewriter effect subheader on the main page. This component is my version of a [Now page](https://nownownow.com/about), streamlined for my own uses. I regularly update this component with what I’m up-to, including but not limited to training for a marathon and recently becoming a father - woohoo!
 
-<div className="pt-6 pb-2">
-  <div className="relative bottom-0 object-top-left sm:object-cover border rounded-lg bg-neutral-50 w-full h-full aspect-video border-black/10  overflow-hidden">
-    <Image
-      src="/design/subheader.png"
-      alt="Probably cooking something demonstration of streamlined subheader. Mocked up over desktop"
-      objectFit="cover"
-      fill
-    />
-  </div>
-  <figcaption className="w-full align-middle text-center text-neutral-400 font-jbd">
-    Subheader located top left on index
-  </figcaption>
-</div>
-
-<Video src="subheader.mp4" />
+<Video src="subheader.mp4" caption="Subheader located top left on index" />
 
 Beyond the main feed pages this site is designed to be explored via the footer. I’m the type of video game player that plays all the side quests and tries to explore 100% of the map. The UX intentionally rewards the explorer. This is a behavior I want to champion over the typical kite-lite social media users (myself included) that blows whichever way the algorithmic wind blows them.
 
@@ -95,7 +81,7 @@ Other than the "blog" parts of my site - where I’m regularly writing and spend
 <BlogImage
   src="/design/index.svg"
   alt="status symbols for jacobs.blue 3 symbols denoting idea draft and polished"
-  fig=" I designed these using icons from Material UI"
+  fig="from index I have several folders with their own index (list) and slug (dynamically generated mdx)"
 />
 
 Of several specific use cases, the original use case for my site and one of the most regularly utilized is the song page. Song pages are really cool. I’ve never seen an artist with one like mine. On the song page a user can primarily find all streaming links but they can also sing along with lyrics, read through the credits and _one day soon_ play the music in-browser. [Check it out!](/discography)
