designs content updates

--- a/data/designs/colophon.mdx
+++ b/data/designs/colophon.mdx
@@ -1,6 +1,6 @@
 ---
 date: '2023-10-25'
-updated: '2023-11-01'
+updated: '2023-11-02'
 title: 'About jacobs.blue (Colophon)'
 description: 'How to'
 thumbnail: ''
@@ -20,14 +20,14 @@ toc:
     next,
   ]
 status: 'Draft'
-version: 1
+version: 2
 ---
 
 jacobs.blue is an attempt at being the best representation of my work, art, interests and thoughts at any given time. Like myself, jacobs.blue is a constant work in progress.
 
 Without the feedback of many great designers and the JSON CMS my good friend built and hooked up for me, jacobs.blue would not exist. Other than these contributions I designed and built this site myself. All of it is open source and can be found on [github](https://github.com/jmedure).
 
-In 2020 [jacobs.blue 1.0](https://jacobs.blue/archive) was built with vanilla HTML, CSS and Javascript. It's goal was to promote and showcase my debut album. The UX was simple, direct and optimized for getting inbound users (mainly from instagram) to their preferred streaming service quickly. This was an awesome site but didn’t age beyond my next release. The more things I made and the more disenfranchised I grew with traditional sharing mediums, the more it became apparent I needed my own true home for Jacob's Blue.
+In 2020 [jacobs.blue 1.0](https://jacobs.blue/archive) was built with vanilla HTML, CSS and Javascript. It's goal was to promote and showcase my debut album. The UX was simple, direct and optimized for getting inbound users (mainly from instagram) to their preferred streaming service quickly. This was an awesome site but didn’t age beyond the release of my next song. The more things I made and the more disenfranchised I grew with traditional sharing mediums, the more it became apparent I needed my own true home for Jacob's Blue.
 
 In hopes to carve out a representative corner of the internet, _and greatly test my dev skills_, over two years ago I set out to build that home.
 
@@ -46,7 +46,7 @@ jacobs.blue needed to:
 
 Guiding principles:
 
-**Bias towards action**: Post early and often. Perfectionism is actually a crutch of mine and we’re not doing that here.
+**Bias towards action**: Post early and often. Perfectionism is a crutch of mine and we’re not doing that here.
 
 **Zero downtime**: No “under construction” or “we’ll be back later” sign means friends, family, listeners, fellow interneters, prospective collaborators, and future employers always have access to an up to date version of my work.
 
@@ -58,9 +58,9 @@ _Lastly, most importantly…_
 
 ### Technologies
 
-This site uses [Next.js](https://nextjs.org), [Tailwind CSS](https://tailwindcss.com), and a bit of [React](https://react.dev). I host on [Vercel](https://vercel.com) and use privacy first analytics provider, [Simple Analytics](https://simpleanalytics.com). Content is managed using a couple JSON files and many MDX files. It’s easy for me to write content directly in VS Code, and push changes to main in little time. For the most part, animations are built leveraging [Framer Motion](https://www.framer.com/motion/).
+This site uses [Next.js](https://nextjs.org), [Tailwind CSS](https://tailwindcss.com), and is written in [React](https://react.dev). I host on [Vercel](https://vercel.com) and use privacy first analytics provider, [Simple Analytics](https://simpleanalytics.com). Content is managed locally using a couple JSON files and many MDX files. It’s easy for me to write content in VS Code, and push changes to main. For the most part, animations are built leveraging [Framer Motion](https://www.framer.com/motion/).
 
-These days splitting time between using Figma and designing in-browser as I code.
+These days I'm splitting time between using Figma and designing in-browser as I code.
 
 ### Typography
 
@@ -76,7 +76,7 @@ You’ll notice a typewriter effect subheader on the main page. This component i
 
 Beyond the main feed pages this site is designed to be explored via the footer. I’m the type of video game player that plays all the side quests and tries to explore 100% of the map. The UX intentionally rewards the explorer. This is a behavior I want to champion over the typical kite-lite social media users (myself included) that blows whichever way the algorithmic wind blows them.
 
-Other than the "blog" parts of my site - where I’m regularly writing and spending entirely too much time rewriting css- the footer contains many regularly updated indexes. These indexes break down into detail pages that signal turn-around points for the user. Some cool indexes include, [every song I’ve ever released](/discography), [past versions of the website](/archive) and, what I deem to be, [valuable, book recommendations](/library). These pages are a lot of fun to make and hopefully fun for you to look through.
+Other than the "blog" parts of my site - where I’m regularly writing and spending entirely too much time rewriting css- the footer contains many regularly updated indexes. These indexes break down into detail pages that signal turn-around points for the user. Some cool indexes include, [every song I’ve ever released](/discography), [past versions of the website](/archive) and [valuable book recommendations](/library). These pages are a lot of fun to make and hopefully fun for you to look through.
 
 <BlogImage
   src="/design/index.svg"
@@ -102,10 +102,24 @@ Note: perfectly reflecting why this is important, I’ve changed the naming conv
 
 ## Inspirations
 
-There are many exceptional designers sharing their work on the internet that helped shaped this project. Ranging from small to very large sources of inspiration, jacobs.blue would not exist in it's current form without the following: [Maggie Appleton](https://maggieappleton.com/), [Jordan Singer](https://ibuildmyideas.com/), [Eike Drescher](https://www.eikedrescher.com/) [Marco Cornacchia](https://www.marco.fyi/), [Paco Coursey](https://paco.me/), [Rauno Freiberg](https://rauno.me/), [Rikitesh Nighot](https://nighot.com/), [Brian Lovin](https://brianlovin.com/), [Joseph Zhang](https://www.josephz.me/), [Ethan](https://area.cx), [Sebastian](https://www.carlhauser.com/). Thank you for your work!
+There are many exceptional designers sharing their work on the internet that helped shaped this project. Ranging from small to very large sources of inspiration, jacobs.blue would not exist in it's current form without the following:
+
+- [Maggie Appleton](https://maggieappleton.com/)
+- [Jordan Singer](https://ibuildmyideas.com/)
+- [Eike Drescher](https://www.eikedrescher.com/)
+- [Marco Cornacchia](https://www.marco.fyi/)
+- [Paco Coursey](https://paco.me/)
+- [Rauno Freiberg](https://rauno.me/)
+- [Rikitesh Nighot](https://nighot.com/)
+- [Brian Lovin](https://brianlovin.com/)
+- [Joseph Zhang](https://www.josephz.me/)
+- [Ethan](https://area.cx)
+- [Sebastian](https://www.carlhauser.com/)
+
+Thank you for your work!
 
 ## Next
 
-Althought corny, making this site has made me more comfortable being all the things I am under one umbrella. Social media has made me feel like I'm _only_ a musician, but in the real world I am many things. Jacobs.blue is not only a good representation of this but helped me own it. I used to keep to websites, one for my design work, one for music. Now I'm comfortable with them in the same space. Like myself, jacobs.blue is a constant work in progress. Expect jacobs.blue to evolve and change shape as much as I do.
+Making this site has made me more comfortable being all the things I am under one umbrella. Social media has made me feel like I'm _only_ a musician, but in the real world I am many things. Jacobs.blue is not only a good representation of this but helped me own it. I used to keep two websites, one for my design work, one for music. Now I'm comfortable with them in the same space. Like myself, jacobs.blue is a constant work in progress. Expect jacobs.blue to evolve and change shape as much as I do.
 
 If you’ve made it this far please share some feedback either on [twitter](https://twitter.com/jacobs__blue) or [email me](mailto:jake@jacobs.blue?subject=Wus%20cracking%20big%20dawg?) directly.
