--- a/data/designs/colophon.mdx
+++ b/data/designs/colophon.mdx
@@ -19,8 +19,8 @@ toc:
     inspirations,
     next,
   ]
-status: 'Draft'
-version: 2
+status: 'Essay'
+version: 1
 ---
 
 jacobs.blue is an attempt at being the best representation of my work, art, interests and thoughts at any given time. Like myself, jacobs.blue is a constant work in progress.
