--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -28,7 +28,7 @@ In practice we aim to be embedded on different agile squads that work on various
 
 <div className="pt-3 pb-6">
   <BlogImage
-    src="/design/team.png"
+    src="/design/team1.png"
     alt="Zip team structure"
     fig="Our otherwise flat design team is lead by our director, Clay."
     type={2}
