--- a/data/designs/zip-experiments.mdx
+++ b/data/designs/zip-experiments.mdx
@@ -113,7 +113,7 @@ This is further muddied by the fact that our homepage is more or less a list of 
 
 One weapon in our arsenel to help communicate the concept of paying anywhere implicitlly is categories.
 
-However, because of constant competition for homepage real-estate - affilate placement, user communications, and new features - over time the categories component has become buried further and further down the page.
+However, because of constant competition for homepage real-estate - affiliate placement, user communications, and new features - over time the categories component has become buried further and further down the page.
 
 <Video
   src="old-categories-demo.mp4"
@@ -128,6 +128,10 @@ My arrival at this pattern is not heroic. This was the first design I put forwar
 
 During the design process I was able to pull forward many different instaces of apps using simmilar patterns for search. Categorical filters and/or search are even a key part of this site's homepage.
 
-I knew I wanted categories to be near our search input but they needed to take a different shape. One consideration to keep in mind while designing was how these category components might impact affiliate revenue by pushing merchants down the page. Thus it was important for each category component to be as streamlined as possible whilst to the point that they still maintained clear accessbility.
+I knew I wanted categories to be near our search input but they needed to take a different shape. One consideration to keep in mind while designing was how these category components might impact affiliate revenue by pushing merchants down the page. Thus it was important for each category component to be as streamlined as possible to the point that they still maintained clear accessbility.
+
+After, working through the touch point itself I needed to determine the actual content. Many people had input. The final result was a collaboration between myself, my PM, my design director, the affiliate lead, and product marketing.
+
+I balanced a proper order with making sure the categories overflowed the container to communicate horizontal scrolling to the user.
 
 <ComingSoon />
