--- a/data/designs/song-seeds.mdx
+++ b/data/designs/song-seeds.mdx
@@ -5,7 +5,7 @@ title: 'The case for Song Seeds'
 description: 'Creative constraints for the modern musician'
 thumbnail: ''
 tags: [creative tools, design, physical products]
-image: '/design/seedscover.png'
+image: '/design/seedsCover.png'
 youtube: ''
 alt: ''
 isPublished: 'true'
